# pycc

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  Makefile  README.md  opt_arith.py  pe_col1_out.txt  pe_empty_out.txt  pe_nofile_out.txt  pe_out2.txt  pe_tmp.py
cmake/: ClangTidyPlugins.cmake  GeneratePresets.cmake  ProjectOptions.cmake  Sources.cmake  Targets.cmake  Testing.cmake  TidyTarget.cmake
demos/: _dbg_copy.py  _dbg_copy2.py  _dbg_pprint.py  _dbg_pprint2.py  _dbg_pprint3.py  _osp_min.py  _posix_min.py  _probe_collections.py  _probe_dd.py  _probe_sys.py  arith.py  augassign.py  boolexpr.py  classes.py  collections.py  compare.py  comprehensions.py  e2e_abc.py  e2e_argparse.py  e2e_array.py  e2e_base64.py  e2e_binascii.py  e2e_bisect.py  e2e_calendar.py  e2e_collections.py  (+71 more)
test/pycc/e2e/: CMakeLists.txt  metrics_json_test.cmake  return_int_test.cmake
test/pycc/integration/: CMakeLists.txt  test_lower_to_llvm.cpp  test_metrics.cpp  test_metrics_runtime_counters.cpp  test_optimizer_metrics.cpp  test_typed_returns.cpp
test/pycc/unit/: CMakeLists.txt  test_cli.cpp  test_frontend_return_int.cpp  test_metrics_breakdown.cpp  test_metrics_counters_gauges.cpp  test_metrics_hints.cpp  test_runtime__ast.cpp  test_runtime__asyncio.cpp  test_runtime_abc.cpp  test_runtime_aix_support.cpp  test_runtime_allocator_thread_local.cpp  test_runtime_android_support.cpp  test_runtime_apple_support.cpp  test_runtime_argparse.cpp  test_runtime_array.cpp  test_runtime_atomics_contention.cpp  test_runtime_attributes.cpp  test_runtime_base64.cpp  test_runtime_binascii.cpp  test_runtime_bisect.cpp  test_runtime_bisect_insort.cpp  test_runtime_boxed.cpp  test_runtime_bytes_bytearray.cpp  test_runtime_bytes_bytearray_edges.cpp  test_runtime_bytes_more.cpp  test_runtime_calendar.cpp  test_runtime_casefold_ascii_fallback.cpp  test_runtime_channel_immutability.cpp  test_runtime_channels_backpressure_close.cpp  test_runtime_collections.cpp  test_runtime_colorsys.cpp  test_runtime_conservative.cpp  test_runtime_copy.cpp  test_runtime_datetime.cpp  test_runtime_dict_rehash.cpp  test_runtime_errno.cpp  test_runtime_exceptions_api.cpp  test_runtime_exceptions_chain.cpp  test_runtime_extras.cpp  test_runtime_fnmatch.cpp  (+53 more)
(+857 files in other folders)
